# vcpkg-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
my-registry/zlib/: portfile.cmake
my-registry/😇/: baseline.json
my-registry/😇/z-/: zlib.json
src/: main.cxx
